Updates in 20200426 (v0.5):

+ New Plugins - SCREENTIME, QUICKLOOK, TERMINALSTATE, APPLIST, COOKIES
+ Compatibility with macOS 10.15 separate System & Data volumes
+ Better disk space reporting for APFS & HFS
+ Added AFF4 support
+ FSEVENTS now works for iOS
+ BootVolume Spotlight parsing for Catalina
+ Add ssh known_hosts to RECENTITEMS
+ Add zsh history to bash session
+ Added column for recent_app in dockitems

! Fixed ios Spotlight bug
! Handling of * in format strings in UNIFIEDLOGS 

Updates in 20190816 (v0.4.1):

+ RecentItems plugin now reads FileCreatedDates from APP.securebookmarks.plist
+ RecentItems plugin now gets Mounted dev/vol name from userglobalpref plist
+ RecentItems plugin now reads LastSaveFilePathBookmark
+ Better exception handling in some places
+ Now gracefully handles file open failure in MOUNTED mode (due to lacking permissions)

! Fixed bugs in Plugins - Printjobs, iDeviceInfo, Wifi

Updates in 20190720 (v0.4):

+ New plugins - FSEVENTS, SPOTLIGHT, MSOFICE, UNIFIEDLOGS, AUTOSTART, IDEVICEINFO
+ Added ability to process VMDK disk images
+ RecentItems now reads SFL2 files
+ API for reading XATTR on APFS & HFS
+ mac_apt_singleplugin is renamed to mac_apt_artifact_only
+ Lots of changes under the hood for APFS handling, 
  = enumerating files/folders is now several times faster
  = encrypted volumes are detected properly now
  = exporting or opening very large files is now supported
  = now handles dirty APFS volume mounting using checkpoint processing
  = disk processing is more robust now, less crash prone now!

! Fixed Bash sessions bug, not retrieving data from .historynew files
! Fixed a bug with MOUNTED mode
! Basicinfo now gets vol info on vol-only images
! Minor bug fixes to several plugins

Updates in 20180606 (v0.3):

+ Added FrequentlyVisitedSitesCache, NSNavLastRootDirectory & RecentlyClosedTabls.plist parsing to SAFARI plugin
+ Added GotoFieldHistory, RecentMoveCopyDestinations, BulkRename settings to RECENTITEMS plugin