@@ -1,3 +1,14 @@
+Updates in 20200426 (v0.6):
+
++ APFS encryption support added, encrypted volumes can be processed by sproviding password/recovery-key
++ FAST mode, which skips plugins IDEVICEBACKUPS, SPOTLIGHT, UNIFIEDLOGS
++ BASHSESSIONS is now TERMSESSIONS (it reads zsh history too)
++ Better HFS parsing, and reading of large files
++ Support for Maquisition created AFF4 images
+
+! FSEVENTS plugin is now a lot faster
+! Bugfixes, improvements in other plugins - QUICKLOOK, IMESSAGE, COOKIES
+
 Updates in 20200426 (v0.5):
 
 + New Plugins - SCREENTIME, QUICKLOOK, TERMINALSTATE, APPLIST, COOKIES
